# FixMySlop

./: .gitignore  LICENSE  README.md  USER_GUIDE.md  macros.py  main.py  pyproject.toml  requirements.txt  setup.py  test_bait.py
.github/workflows/: publish.yml
cli/: __init__.py  cli_app.py  cli_output.py  cli_prompts.py
core/: __init__.py  analyzer.py  fix_engine.py  issue.py  llm_client.py  model_detector.py  patch_applier.py  prompts.py  report_builder.py  scanner.py  static_tools.py
fixmyslop/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_fix_engine.py  test_llm_client.py  test_patch_applier.py  test_report_builder.py  test_scanner.py  test_static_tools.py
ui/: __init__.py  app.py  main_window.py  theme.py
ui/assets/styles/: dark.qss  light.qss
ui/panels/: __init__.py  about_panel.py  fix_panel.py  home_panel.py  report_panel.py  scan_panel.py  settings_panel.py
ui/widgets/: __init__.py  code_block.py  diff_viewer.py  file_tree.py  issue_card.py  model_selector.py  progress_ring.py  severity_badge.py  toast.py
utils/: __init__.py  config.py  diff_utils.py  file_utils.py  hash_utils.py  logger.py  system_info.py
